--- a/index.html
+++ b/index.html
@@ -3,16 +3,21 @@
 
 <head>
     <meta charset="UTF-8">
+    <meta name="author" content="Yaseer Mohammad">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Home</title>
-    <link rel="stylesheet" href="./style.css">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" />
+    <title>My Portfolio</title>
 
+    <!-- STYLES -->
+    <link rel="stylesheet" href="./style.css">
+
+    <!-- Libraries -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" />
     <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
 </head>
 
 <body>
     <div class="home-page">
+        <!-- START OF NAVBAR -->
         <nav class="navbar">
             <div class="navbar__logo">
                 <h1 class="navbar__logo-text">Yaseer</h1>
@@ -32,6 +37,7 @@
             </div>
         </nav>
 
+        <!-- START OF HERO SECTION -->
         <div id="home" class="hero-section">
             <div class="hero-section__left">
                 <h1 class="hero-section__title">Hi, My Name Is Yaseer Muhammad !!</h1>
@@ -51,6 +57,7 @@
             </div>
         </div>
 
+        <!-- START OF ABOUT SECTION -->
         <div id="about" class="hero-section about-section">
             <div class="hero-section__left">
                 <h1 class="hero-section__title">Why Excatly Is Yaseer Mohammad ?!</h1>
@@ -70,6 +77,7 @@
             </div>
         </div>
 
+        <!-- START OF PORTFOLIO SECTION -->
         <div id="portfolio" class="swiper-container">
             <h1 class="hero-section__subtitle" style="text-align: center;">MY PORTFOLIO</h1>
 
@@ -87,7 +95,11 @@
                         </div>
                         <h2>Juice Plus Product</h2>
 
-                        <p>juice Plus is a fictional juice company created for my school assignment. the aim of the project is to create a brand and design a product packaging to promote and display product within. i brainstromed ideas and worked on the structure, materials, color, imagery, typography & regulated information with anclillary design elements to make product suitable for making.</p>
+                        <p>juice Plus is a fictional juice company created for my school assignment. the aim of the
+                            project is to create a brand and design a product packaging to promote and display product
+                            within. i brainstromed ideas and worked on the structure, materials, color, imagery,
+                            typography & regulated information with anclillary design elements to make product suitable
+                            for making.</p>
                         <div class="btns">
 
                             <button onclick="goToContact()">Contact Yaseer</button>
@@ -105,7 +117,11 @@
                         </div>
                         <h2>Artisans Craft</h2>
 
-                        <p>Artisans Craft is an online art buissness focused on resin art. The project was to create a logo, buisness card, notepad & T-Shirt printed logo design. Client wanted a modern design with lean looks but colourful. I collected all the branding process of the buissness and went through several iterations over a couple of days. I created the final design as a freelancer. </p>
+                        <p>Artisans Craft is an online art buissness focused on resin art. The project was to create a
+                            logo, buisness card, notepad & T-Shirt printed logo design. Client wanted a modern design
+                            with lean looks but colourful. I collected all the branding process of the buissness and
+                            went through several iterations over a couple of days. I created the final design as a
+                            freelancer. </p>
                         <div class="btns">
 
                             <button onclick="goToContact()">Contact Yaseer</button>
@@ -124,7 +140,10 @@
                         </div>
                         <h2>Transform FIT</h2>
 
-                        <p>TrasformFit is a team of registered ditecians and nutritionists. These professionals specialize in nutrition and can create personalized diet plans to help people achieve weight loss goals. The aim of the project is to create a brand awaeness for TrasformFit and be able to attract target auidiance and deliver its overall brand positioning</p>
+                        <p>TrasformFit is a team of registered ditecians and nutritionists. These professionals
+                            specialize in nutrition and can create personalized diet plans to help people achieve weight
+                            loss goals. The aim of the project is to create a brand awaeness for TrasformFit and be able
+                            to attract target auidiance and deliver its overall brand positioning</p>
                         <div class="btns">
 
                             <button onclick="goToContact()">Contact Yaseer</button>
@@ -142,7 +161,11 @@
                         </div>
                         <h2>Juice Plus Product</h2>
 
-                        <p>juice Plus is a fictional juice company created for my school assignment. the aim of the project is to create a brand and design a product packaging to promote and display product within. i brainstromed ideas and worked on the structure, materials, color, imagery, typography & regulated information with anclillary design elements to make product suitable for making.</p>
+                        <p>juice Plus is a fictional juice company created for my school assignment. the aim of the
+                            project is to create a brand and design a product packaging to promote and display product
+                            within. i brainstromed ideas and worked on the structure, materials, color, imagery,
+                            typography & regulated information with anclillary design elements to make product suitable
+                            for making.</p>
                         <div class="btns">
 
                             <button onclick="goToContact()">Contact Yaseer</button>
@@ -160,7 +183,11 @@
                         </div>
                         <h2>Artisans Craft</h2>
 
-                        <p>Artisans Craft is an online art buissness focused on resin art. The project was to create a logo, buisness card, notepad & T-Shirt printed logo design. Client wanted a modern design with lean looks but colourful. I collected all the branding process of the buissness and went through several iterations over a couple of days. I created the final design as a freelancer. </p>
+                        <p>Artisans Craft is an online art buissness focused on resin art. The project was to create a
+                            logo, buisness card, notepad & T-Shirt printed logo design. Client wanted a modern design
+                            with lean looks but colourful. I collected all the branding process of the buissness and
+                            went through several iterations over a couple of days. I created the final design as a
+                            freelancer. </p>
                         <div class="btns">
 
                             <button onclick="goToContact()">Contact Yaseer</button>
@@ -179,7 +206,10 @@
                         </div>
                         <h2>Transform FIT</h2>
 
-                        <p>TrasformFit is a team of registered ditecians and nutritionists. These professionals specialize in nutrition and can create personalized diet plans to help people achieve weight loss goals. The aim of the project is to create a brand awaeness for TrasformFit and be able to attract target auidiance and deliver its overall brand positioning</p>
+                        <p>TrasformFit is a team of registered ditecians and nutritionists. These professionals
+                            specialize in nutrition and can create personalized diet plans to help people achieve weight
+                            loss goals. The aim of the project is to create a brand awaeness for TrasformFit and be able
+                            to attract target auidiance and deliver its overall brand positioning</p>
                         <div class="btns">
 
                             <button onclick="goToContact()">Contact Yaseer</button>
@@ -190,7 +220,7 @@
 
         </div>
 
-
+        <!-- START OF CONTACT SECTION -->
         <div id="contact" class="hero-section contact-us">
             <div class="hero-section__left">
                 <div>
@@ -213,31 +243,31 @@
                             <div class="icon">
                                 <a href="https://www.behance.net/mohammadyaseer/">
                                     <svg width="38" height="38" viewBox="0 0 38 38" fill="none"
-                                    xmlns="http://www.w3.org/2000/svg">
-                                    <path fill-rule="evenodd" clip-rule="evenodd"
-                                        d="M13.6289 26.7835C15.1495 27.8436 16.999 28.4697 18.9931 28.4697C20.0006 28.4697 20.945 28.2646 21.8605 27.9751C21.6975 25.7574 21.2634 23.5686 20.6058 21.4614C17.8434 22.4479 15.3969 24.2763 13.6289 26.7835Z"
-                                        fill="#0D0C22"></path>
-                                    <path fill-rule="evenodd" clip-rule="evenodd"
-                                        d="M19.8992 19.4883C19.6728 18.9122 19.4361 18.3676 19.1704 17.8125C17.0737 18.7386 14.8006 19.2515 12.4699 19.2515C11.4938 19.2515 10.5073 19.128 9.53125 18.9937C9.53125 21.4719 10.4968 23.7002 12.0489 25.3865C14.072 22.611 16.8054 20.588 19.8992 19.4883Z"
-                                        fill="#0D0C22"></path>
-                                    <path fill-rule="evenodd" clip-rule="evenodd"
-                                        d="M24.2337 11.1114C22.7341 10.1144 20.9374 9.53027 18.9933 9.53027C18.1303 9.53027 17.3174 9.68286 16.5176 9.89858C17.8725 11.4719 19.0748 13.166 20.0823 14.976C21.6767 13.9895 23.084 12.6952 24.2337 11.1114Z"
-                                        fill="#0D0C22"></path>
-                                    <path fill-rule="evenodd" clip-rule="evenodd"
-                                        d="M18.2022 15.9309C17.1552 14.0709 15.9108 12.324 14.4718 10.7324C12.1514 12.0058 10.4151 14.205 9.79688 16.8569C12.6855 17.391 15.6029 17.0515 18.2022 15.9309Z"
-                                        fill="#0D0C22"></path>
-                                    <path fill-rule="evenodd" clip-rule="evenodd"
-                                        d="M22.6309 20.8849C23.257 22.9 23.6701 24.9651 23.8753 27.0723C26.093 25.7254 27.7372 23.5155 28.2739 20.8953C26.3718 20.5244 24.4592 20.5139 22.6309 20.8849Z"
-                                        fill="#0D0C22"></path>
-                                    <path fill-rule="evenodd" clip-rule="evenodd"
-                                        d="M21.0391 16.8463C21.3574 17.5146 21.6441 18.1933 21.9125 18.8799C24.0275 18.409 26.2374 18.3985 28.4473 18.7878C28.3946 16.3517 27.4081 14.1419 25.8481 12.4897C24.5117 14.2761 22.8779 15.7466 21.0391 16.8463Z"
-                                        fill="#0D0C22"></path>
-                                    <path fill-rule="evenodd" clip-rule="evenodd"
-                                        d="M19 0C8.50659 0 0 8.50659 0 19V19C0 29.4934 8.50659 38 19 38V38C29.4934 38 38 29.4934 38 19V19C38 8.50659 29.4934 0 19 0V0ZM18.9935 30.5767C12.6112 30.5767 7.42328 25.3756 7.42328 18.9934C7.42328 12.6112 12.6112 7.42328 18.9935 7.42328C25.3756 7.42328 30.5767 12.6112 30.5767 18.9934C30.5767 25.3756 25.3756 30.5767 18.9935 30.5767Z"
-                                        fill="#0D0C22"></path>
-                                </svg>
+                                        xmlns="http://www.w3.org/2000/svg">
+                                        <path fill-rule="evenodd" clip-rule="evenodd"
+                                            d="M13.6289 26.7835C15.1495 27.8436 16.999 28.4697 18.9931 28.4697C20.0006 28.4697 20.945 28.2646 21.8605 27.9751C21.6975 25.7574 21.2634 23.5686 20.6058 21.4614C17.8434 22.4479 15.3969 24.2763 13.6289 26.7835Z"
+                                            fill="#0D0C22"></path>
+                                        <path fill-rule="evenodd" clip-rule="evenodd"
+                                            d="M19.8992 19.4883C19.6728 18.9122 19.4361 18.3676 19.1704 17.8125C17.0737 18.7386 14.8006 19.2515 12.4699 19.2515C11.4938 19.2515 10.5073 19.128 9.53125 18.9937C9.53125 21.4719 10.4968 23.7002 12.0489 25.3865C14.072 22.611 16.8054 20.588 19.8992 19.4883Z"
+                                            fill="#0D0C22"></path>
+                                        <path fill-rule="evenodd" clip-rule="evenodd"
+                                            d="M24.2337 11.1114C22.7341 10.1144 20.9374 9.53027 18.9933 9.53027C18.1303 9.53027 17.3174 9.68286 16.5176 9.89858C17.8725 11.4719 19.0748 13.166 20.0823 14.976C21.6767 13.9895 23.084 12.6952 24.2337 11.1114Z"
+                                            fill="#0D0C22"></path>
+                                        <path fill-rule="evenodd" clip-rule="evenodd"
+                                            d="M18.2022 15.9309C17.1552 14.0709 15.9108 12.324 14.4718 10.7324C12.1514 12.0058 10.4151 14.205 9.79688 16.8569C12.6855 17.391 15.6029 17.0515 18.2022 15.9309Z"
+                                            fill="#0D0C22"></path>
+                                        <path fill-rule="evenodd" clip-rule="evenodd"
+                                            d="M22.6309 20.8849C23.257 22.9 23.6701 24.9651 23.8753 27.0723C26.093 25.7254 27.7372 23.5155 28.2739 20.8953C26.3718 20.5244 24.4592 20.5139 22.6309 20.8849Z"
+                                            fill="#0D0C22"></path>
+                                        <path fill-rule="evenodd" clip-rule="evenodd"
+                                            d="M21.0391 16.8463C21.3574 17.5146 21.6441 18.1933 21.9125 18.8799C24.0275 18.409 26.2374 18.3985 28.4473 18.7878C28.3946 16.3517 27.4081 14.1419 25.8481 12.4897C24.5117 14.2761 22.8779 15.7466 21.0391 16.8463Z"
+                                            fill="#0D0C22"></path>
+                                        <path fill-rule="evenodd" clip-rule="evenodd"
+                                            d="M19 0C8.50659 0 0 8.50659 0 19V19C0 29.4934 8.50659 38 19 38V38C29.4934 38 38 29.4934 38 19V19C38 8.50659 29.4934 0 19 0V0ZM18.9935 30.5767C12.6112 30.5767 7.42328 25.3756 7.42328 18.9934C7.42328 12.6112 12.6112 7.42328 18.9935 7.42328C25.3756 7.42328 30.5767 12.6112 30.5767 18.9934C30.5767 25.3756 25.3756 30.5767 18.9935 30.5767Z"
+                                            fill="#0D0C22"></path>
+                                    </svg>
                                 </a>
-                                
+
                             </div>
 
                             <div class="icon">
@@ -267,13 +297,13 @@
                             <div class="icon">
                                 <a href="https://www.linkedin.com/in/mohammad-yaseer-271a62316/">
                                     <svg width="38" height="38" viewBox="0 0 38 38" fill="none"
-                                    xmlns="http://www.w3.org/2000/svg">
-                                    <path
-                                        d="M19 0C8.50819 0 0 8.50819 0 19C0 29.4918 8.50819 38 19 38C29.4918 38 38 29.4918 38 19C38 8.50819 29.4918 0 19 0ZM13.4788 28.7227H8.85146V14.8011H13.4788V28.7227ZM11.1653 12.9001H11.1351C9.58234 12.9001 8.57806 11.8312 8.57806 10.4953C8.57806 9.1292 9.61307 8.08984 11.196 8.08984C12.779 8.08984 13.7531 9.1292 13.7832 10.4953C13.7832 11.8312 12.779 12.9001 11.1653 12.9001ZM30.1641 28.7227H25.5373V21.275C25.5373 19.4033 24.8673 18.1268 23.1931 18.1268C21.9148 18.1268 21.1535 18.9878 20.8189 19.819C20.6966 20.1165 20.6667 20.5322 20.6667 20.9482V28.7227H16.0397C16.0397 28.7227 16.1003 16.1072 16.0397 14.8011H20.6667V16.7723C21.2816 15.8237 22.3819 14.4744 24.8369 14.4744C27.8813 14.4744 30.1641 16.4641 30.1641 20.7401V28.7227Z"
-                                        fill="#0D0C22"></path>
-                                </svg>
+                                        xmlns="http://www.w3.org/2000/svg">
+                                        <path
+                                            d="M19 0C8.50819 0 0 8.50819 0 19C0 29.4918 8.50819 38 19 38C29.4918 38 38 29.4918 38 19C38 8.50819 29.4918 0 19 0ZM13.4788 28.7227H8.85146V14.8011H13.4788V28.7227ZM11.1653 12.9001H11.1351C9.58234 12.9001 8.57806 11.8312 8.57806 10.4953C8.57806 9.1292 9.61307 8.08984 11.196 8.08984C12.779 8.08984 13.7531 9.1292 13.7832 10.4953C13.7832 11.8312 12.779 12.9001 11.1653 12.9001ZM30.1641 28.7227H25.5373V21.275C25.5373 19.4033 24.8673 18.1268 23.1931 18.1268C21.9148 18.1268 21.1535 18.9878 20.8189 19.819C20.6966 20.1165 20.6667 20.5322 20.6667 20.9482V28.7227H16.0397C16.0397 28.7227 16.1003 16.1072 16.0397 14.8011H20.6667V16.7723C21.2816 15.8237 22.3819 14.4744 24.8369 14.4744C27.8813 14.4744 30.1641 16.4641 30.1641 20.7401V28.7227Z"
+                                            fill="#0D0C22"></path>
+                                    </svg>
                                 </a>
-                                
+
                             </div>
                         </div>
                     </div>
@@ -314,9 +344,12 @@
         </div>
     </div>
 
+    <!-- START OF FOOTER SECTION -->
     <footer>
         <h2>hello@yaseer.com</h2>
     </footer>
+
+    <!-- JS FILES -->
     <script src="./app.js"></script>
 </body>
 
